--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node ./dist/index.js",
+        "start": "cross-env NODE_ENV=production node ./dist/index.js",
         "build": "tsc",
         "lint": "eslint './src/**/*.{ts,tsx}",
         "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts"
@@ -13,14 +13,20 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@prisma/client": "^5.2.0",
+        "@types/bcrypt": "^5.0.0",
+        "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-validator": "^7.0.1",
+        "jsonwebtoken": "^9.0.1",
         "typescript": "^4.9.4"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^20.5.0",
         "@types/socket.io": "^3.0.2",
         "@typescript-eslint/eslint-plugin": "^6.4.0",
