--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^9.0.1",
+        "socket.io": "^4.7.2",
         "typescript": "^4.9.4"
     },
     "devDependencies": {
