--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-validator": "^7.0.1",
+        "firebase-admin": "^11.10.1",
         "jsonwebtoken": "^9.0.1",
         "socket.io": "^4.7.2",
         "typescript": "^4.9.4"
