--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "cross-env NODE_ENV=production node ./dist/src/index.js",
-        "build": "prisma generate && tsc",
-        "postinstall": "prisma generate",
+        "build": "npm install @prisma/client && tsc",
         "lint": "eslint './src/**/*.{ts,tsx}",
         "dev": "cross-env NODE_ENV=development ts-node-dev ./src/index.ts"
     },
