--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "express-validator": "^7.0.1",
         "firebase-admin": "^11.10.1",
         "jsonwebtoken": "^9.0.1",
+        "prisma": "^2.30.3",
         "socket.io": "^4.7.2",
         "typescript": "^4.9.4"
     },
